--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,12 @@
   <base href="/" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=rMlKOnvxlK" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=rMlKOnvxlK" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=rMlKOnvxlK" />
+  <link rel="apple-touch-icon" sizes="180x180"
+    href="/apple-touch-icon.png?v=rMlKOnvxlK" />
+  <link rel="icon" type="image/png" sizes="32x32"
+    href="/favicon-32x32.png?v=rMlKOnvxlK" />
+  <link rel="icon" type="image/png" sizes="16x16"
+    href="/favicon-16x16.png?v=rMlKOnvxlK" />
   <link rel="manifest" href="/manifest.json?v=rMlKOnvxlK" />
   <link rel="mask-icon" href="/safari-pinned-tab.svg?v=rMlKOnvxlK" color="#b3ad2d" />
   <link rel="shortcut icon" href="/favicon.ico?v=rMlKOnvxlK" />
@@ -38,8 +41,8 @@
 <body>
   <!-- Google Tag Manager (noscript) -->
   <noscript>
-    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-56D4F6K" height="0" width="0"
-      style="display:none;visibility:hidden"></iframe>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-56D4F6K" height="0"
+      width="0" style="display:none;visibility:hidden"></iframe>
   </noscript>
   <!-- End Google Tag Manager (noscript) -->
   <app-root></app-root>
