--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,8 @@
   <link rel="shortcut icon" href="/favicon.ico?v=rMlKOnvxlK" />
   <meta name="theme-color" content="#ffffff" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
