--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,6 @@
     <meta charset="utf-8" />
     <title>LemonMart</title>
     <base href="/" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="apple-touch-icon"
@@ -47,9 +46,31 @@
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap"
       rel="stylesheet" />
+    <link href="assets/styles/spinner.css" rel="stylesheet" />
   </head>
-
-  <body>
+  <body class="mat-typography mat-app-background">
+    <app-root>
+      <div class="spinner-background">
+        <div class="spinner-container">
+          <svg
+            class="spinner"
+            width="65px"
+            height="65px"
+            viewBox="0 0 66 66"
+            xmlns="http://www.w3.org/2000/svg">
+            <circle
+              class="path"
+              fill="none"
+              stroke-width="6"
+              stroke-linecap="round"
+              cx="33"
+              cy="33"
+              r="30"></circle>
+          </svg>
+          <h2 class="animate-text">Loading</h2>
+        </div>
+      </div>
+    </app-root>
     <!-- Google Tag Manager (noscript) -->
     <noscript>
       <iframe
@@ -59,6 +80,5 @@
         style="display: none; visibility: hidden"></iframe>
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
-    <app-root></app-root>
   </body>
 </html>
