--- a/projects/stage12/src/index.html
+++ b/projects/stage12/src/index.html
@@ -30,9 +30,30 @@
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet" />
+    <link href="assets/styles/spinner.css" rel="stylesheet" />
   </head>
-
-  <body>
-    <app-root></app-root>
+  <body class="mat-typography mat-app-background">
+    <app-root>
+      <div class="spinner-background">
+        <div class="spinner-container">
+          <svg
+            class="spinner"
+            width="65px"
+            height="65px"
+            viewBox="0 0 66 66"
+            xmlns="http://www.w3.org/2000/svg">
+            <circle
+              class="path"
+              fill="none"
+              stroke-width="6"
+              stroke-linecap="round"
+              cx="33"
+              cy="33"
+              r="30"></circle>
+          </svg>
+          <h2 class="animate-text">Loading</h2>
+        </div>
+      </div>
+    </app-root>
   </body>
 </html>
